配置数据库

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+github.client.id = 3e9a0e7fcb670458c29a
+github.client.secret = f47bd900d4010298da56e60e4ab56ab9b39c7eb3
+github.redirect.url = http://localhost:8080/callback
 
+spring.datasource.url=jdbc:h2:~/community?characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=dbuser
+spring.datasource.password=dbpass
+spring.datasource.driver-class-name=org.h2.Driver
