--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/xjint?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=wurendong123
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+
+mybatis.configuration.map-underscore-to-camel-case=true
