--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=wurendong123
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.bjt.xint.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
