--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <artifactId>mybatis-generator-maven-plugin</artifactId>
             <version>1.3.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
+
 
     </dependencies>
 
